# trsync

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  fleet.ini.tpl  fleet.py  setup.iss  test_requirements.txt  trsync.conf  trsync.conf.tpl
.github/actions/setup/: action.yml
.github/workflows/: check-release.yml  deps.sh  release.yml
configure/: Cargo.toml
configure/src/: app.rs  bin.rs  event.rs  lib.rs  run.rs  state.rs  utils.rs
configure/src/app/: mod.rs
configure/src/job/: credentials.rs  mod.rs  workspace.rs
configure/src/panel/: add.rs  instance.rs  mod.rs  root.rs
core/: Cargo.toml
core/src/: activity.rs  client.rs  config.rs  content.rs  control.rs  error.rs  instance.rs  job.rs  lib.rs  local.rs  remote.rs  security.rs  sync.rs  types.rs  user.rs  utils.rs
core/src/change/: local.rs  mod.rs
doc/: deployment.md
manager/: Cargo.toml
manager/src/: bin.rs  client.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  message.rs  model.rs  reload.rs  security.rs  types.rs
monitor/: Cargo.toml
monitor/src/: app.rs  event.rs  lib.rs  run.rs
recipes/linux-x86_64/: Dockerfile
src/: client.rs  context.rs  database.rs  error.rs  local.rs  main.rs  operation.rs  remote.rs  types.rs  util.rs
systray/: Cargo.toml  build.rs  trsync.rc
systray/src/: config.rs  error.rs  icon.rs  linux.rs  main.rs  password.rs  state.rs  utils.rs  windows.rs
systray/src/sync/: mod.rs  politic.rs
tests/: conftest.py  prepare.sh  test_sync_from_empty_workspace.feature  test_sync_from_empty_workspace.py  test_sync_from_filled_workspace.feature  test_sync_from_filled_workspace.py  test_sync_move_from_workspace_to_another.feature  test_sync_move_from_workspace_to_another.py  test_sync_with_conflicts.feature  test_sync_with_conflicts.py  test_sync_with_empty_workspace.feature  test_sync_with_empty_workspace.py
tests/fixtures/: __init__.py  base.py  given.py  model.py  sets.py  then.py  when.py
tools/: package_release_linux.sh  package_release_windows.sh
trsync/: Cargo.toml
trsync/src/: bin.rs  client.rs  conflict.rs  context.rs  database.rs  error.rs  ignore.rs  knowledge.rs  lib.rs  local.rs  main.rs  message.rs  operation.rs  path.rs  remote.rs  run.rs  run2.rs  types.rs  util.rs
trsync/src/event/: local.rs  mod.rs  remote.rs
trsync/src/local/: content.rs  mod.rs  reducer.rs  watcher.rs
trsync/src/local2/: mod.rs  path.rs  reducer.rs
trsync/src/operation/: mod.rs  operator.rs
trsync/src/operation/executor/: mod.rs
trsync/src/operation/executor/disk/: absent.rs  present.rs  updated.rs
trsync/src/operation/executor/remote/: absent.rs  created.rs  mod.rs  modified.rs  named.rs
trsync/src/operation2/: mod.rs  operator.rs
trsync/src/operation2/executor/: mod.rs
trsync/src/operation2/executor/disk/: absent.rs  mod.rs  named.rs  present.rs  updated.rs
trsync/src/operation2/executor/remote/: absent.rs  created.rs  modified.rs  named.rs
trsync/src/reader/: local.rs
trsync/src/remote/: path.rs  watcher.rs
trsync/src/remote2/: content.rs  mod.rs
trsync/src/state/: disk.rs  memory.rs  mod.rs  modification.rs
trsync/src/sync/: local.rs  mod.rs  remote.rs
trsync/src/tests/: mod.rs
