[package]
name = "trsync"
version = "0.1.0"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2018"

[dependencies]
# Core
walkdir = "2.3.2"
# File changes notifications
notify = "4.0.17"
# Cli args
structopt = "0.3.23"
# Database
rusqlite = "0.25.3"
# Http client
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
