[package]
name = "trsync"
version = "0.1.2"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2018"

[dependencies]
# Core
walkdir = "2.3.2"
chrono = "0.4.19"
async-std =  { version = "1.9.0", features = ["tokio1"] }
rpassword = "5.0.1"

# File changes notifications
notify = "4.0.17"
# Cli args
structopt = "0.3.23"
# Database
rusqlite = "0.25.3"
# Http client
reqwest = { version = "0.11.4", features = ["blocking", "json", "stream", "multipart"] }
futures-util = "0.3.17"  # required to call .next() on reqwest Stream
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
