[package]
name = "trsync_manager_configure"
version = "0.1.0"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2021"

[lib]
name = "trsync_manager_configure"
path = "src/lib.rs"

[dependencies]
trsync_core = { path = "../core" }
trsync_manager = { path = "../manager" }
eframe = { version = "0.21.3", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
wgpu = "0.15.0"
rfd = "0.10"
anyhow = "1.0.69"
crossbeam-channel = "0.5"
whoami = "1.2.1"
