[package]
name = "trsync_core"
version = "0.1.0"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2021"

[lib]
name = "trsync_core"
path = "src/lib.rs"

[dependencies]
rust-ini = "0.18.0"
anyhow = "1.0.69"
dirs = "4.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"
whoami = "1.2.1"
keyring = "1.1.2"
log = "0.4.13"
env_logger = "0.9.0"
reqwest = { version = "0.11.4", features = ["blocking", "json", "stream", "multipart"] }
