[package]
name = "trsync_core"
version = "0.1.0"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2021"

[lib]
name = "trsync_core"
path = "src/lib.rs"

[dependencies]
rust-ini = "0.18.0"
anyhow = "1.0.69"
thiserror = "1.0.49"
dirs = "4.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
whoami = "1.2.1"
keyring = "1.1.2"
log = "0.4.13"
env_logger = "0.9.0"
reqwest = { version = "0.11.4", features = ["blocking", "json", "stream", "multipart"] }
strum = "0.25"
strum_macros = "0.25"
crossbeam-channel = "0.5"
md5 = "0.7.0"
minidom = "0.15.2"
# Tests
mockall_double = "0.3.0"
mockall = "0.11.1"