[package]
name = "trsync_manager"
version = "0.2.0"
edition = "2021"

[lib]
name = "trsync_manager"
path = "src/lib.rs"

[[bin]]
name = "trsync_manager"
path = "src/bin.rs"

[dependencies]
trsync_core = { path = "../core" }
trsync = { path = "../trsync" }
log = "0.4.13"
env_logger = "0.9.0"
dirs = "4.0.0"
rust-ini = "0.18.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
notify = "4.0.17"
crossbeam-channel = "0.5"
whoami = "1.2.1"
anyhow = "1.0.69"
thiserror = "1.0"
