[package]
name = "trsync_manager_monitor"
version = "0.2.0"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2021"

[lib]
name = "trsync_manager_monitor"
path = "src/lib.rs"

[dependencies]
trsync_core = { path = "../core" }
trsync_manager = { path = "../manager" }
eframe = { version = "0.21.3", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
wgpu = "0.15.0"
rfd = "0.10"
anyhow = "1.0.69"
crossbeam-channel = "0.5"
whoami = "1.2.1"
log = "0.4.13"
env_logger = "0.9.0"
strum = "0.25"
strum_macros = "0.25"
