[package]
name = "trsync_manager_systray"
version = "0.1.0"
edition = "2021"

[dependencies]
trsync_manager = {path = "../manager"}
env_logger = "0.9.0"
log = "0.4.13"
tray-item = "0.7.0"
rust-ini = "0.18.0"
dirs = "4.0.0"
crossbeam-channel = "0.5"
tiny_http = "0.11"
uuid = {version = "1.0.0", features = ["v4"]}
whoami = "1.2.1"

[target.'cfg(unix)'.dependencies]
gtk = "0.15.4"

[target.'cfg(windows)'.build-dependencies]
windres = "*"