[package]
name = "trsync_manager_systray"
version = "0.1.0"
edition = "2021"

[dependencies]
trsync_core = {path = "../core"}
trsync_manager = {path = "../manager"}
trsync_manager_configure = {path = "../configure"}
trsync = {path = "../trsync"}
env_logger = "0.9.0"
log = "0.4.13"
tray-item = "0.7.0"
rust-ini = "0.18.0"
dirs = "4.0.0"
crossbeam-channel = "0.5"
uuid = {version = "1.0.0", features = ["v4"]}
whoami = "1.2.1"
anyhow = "1.0.69"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
gtk = "0.15.4"
glib = "0.15.11"

[target.'cfg(windows)'.build-dependencies]
windres = "*"