[package]
name = "trsync"
version = "0.3.1"
authors = ["Bastien Sevajol <sevajol.bastien@gmail.com>"]
edition = "2018"

[lib]
name = "trsync"
path = "src/lib.rs"

[[bin]]
name = "trsync"
path = "src/bin.rs"

[dependencies]
trsync_core = { path = "../core" }
# Core
walkdir = "2.3.2"
chrono = "0.4.19"
async-std =  { version = "1.9.0", features = ["tokio1"] }
rpassword = "6.0.1"
bytes = "1.1.0"
tokio = { version = "1.17.0", features = ["time"] }
crossbeam-channel = "0.5"
minidom = "0.14.0"
itertools = "0.11.0"
uuid = { version = "1.4.1", features = ["v4"] }
# Logging
log = "0.4.13"
env_logger = "0.9.0"
# File changes notifications
notify = "4.0.17"
# Cli args
structopt = "0.3.23"
# Database
rusqlite = "0.27.0"
# Http client
reqwest = { version = "0.11.4", features = ["blocking", "json", "stream", "multipart"] }
futures-util = "0.3.17"  # required to call .next() on reqwest Stream
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
anyhow = "1.0.75"
thiserror = "1.0.49"
# Tests
mockall_double = "0.3.0"
mockall = "0.11.1"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.18.1"
testdir = "0.8.0"

[features]
windows = ["rusqlite/bundled"]
